fixed the wysiwyg alignment issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -116,6 +116,10 @@
   line-height: 1.1;
 }
 
+.ProseMirror p {
+  text-wrap: pretty;
+}
+
 .ProseMirror code {
   background-color: rgba(#616161, 0.1);
   color: #616161;
@@ -144,6 +148,11 @@
   border: none;
   border-top: 3px solid #999999;
   margin: 2rem 0;
+}
+
+.ProseMirror img {
+  max-width: 100%;
+  height: auto;
 }
 
 .heading3 {
